@@ -113,6 +113,34 @@
                     </links>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>copy-binaries</id>
+                        <phase>compile</phase>
+                        <configuration>
+                            <target>
+                                <copy todir="${project.build.outputDirectory}" flatten="true">
+                                    <fileset dir="${basedir}/build">
+                                        <include name="**/*.so"/>
+                                        <include name="**/*.dll"/>
+                                        <include name="**/*.properties"/>
+                                    </fileset>
+                                </copy>
+                                <move
+                                        file="${project.build.outputDirectory}/jpyconfig.properties"
+                                        tofile="${project.build.outputDirectory}/jpyconfig.properties.template"/>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
 
         <extensions>
